--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@next/font": "13.2.2",
+    "bootstrap": "^5.3.0-alpha1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.2",
     "next": "13.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.7.2",
+    "react-bootstrap-icons": "^1.10.2",
+    "react-dom": "18.2.0",
+    "react-hover-video-player": "^9.7.1",
+    "sass": "^1.58.3"
   }
 }
